# TFAE

./: LICENSE  README.md  pyproject.toml
tests/: test_tfae.py
tfae/: __init__.py  utils.py
tfae/bottlenecks/: __init__.py  base.py  bernoulli.py  gaussian.py  vanilla.py  variational.py
tfae/models/: __init__.py  autoencoder.py  deep.py
tfae/regularizers/: __init__.py  base.py  gaussian.py  l2.py
tfae/schedulers/: __init__.py  base.py  dasr.py
