[tool.poetry]
name = "tfae"
version = "0.1.0"
description = ""
authors = ["Artem Legotin <hello@artemlegotin.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<=3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
